--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ body {
 /* Page Loader */
 .js .loading::before,
 .js .loading::after {
-  content: '';
+  content: "";
   position: fixed;
   z-index: 1000;
 }
@@ -151,7 +151,7 @@ a:focus {
     pointer-events: none;
     grid-template-columns: auto 1fr 1fr auto;
     grid-template-rows: auto;
-    grid-template-areas: 'title demos demos links';
+    grid-template-areas: "title demos demos links";
   }
   .frame__title {
     margin: 0 4rem 0 0;
@@ -218,14 +218,14 @@ html.has-scroll-dragging {
   min-height: 100vh;
 }
 
-[data-scroll-direction='horizontal'] [data-scroll-container] {
+[data-scroll-direction="horizontal"] [data-scroll-container] {
   white-space: nowrap;
   height: 100vh;
   display: inline-block;
   white-space: nowrap;
 }
 
-[data-scroll-direction='horizontal'] [data-scroll-section] {
+[data-scroll-direction="horizontal"] [data-scroll-section] {
   display: inline-block;
   vertical-align: top;
   white-space: nowrap;
@@ -250,14 +250,14 @@ html.has-scroll-dragging {
 .has-scroll-dragging .c-scrollbar {
   opacity: 1;
 }
-[data-scroll-direction='horizontal'] .c-scrollbar {
+[data-scroll-direction="horizontal"] .c-scrollbar {
   width: 100%;
   height: 10px;
   top: auto;
   bottom: 0;
   transform: scaleY(1);
 }
-[data-scroll-direction='horizontal'] .c-scrollbar:hover {
+[data-scroll-direction="horizontal"] .c-scrollbar:hover {
   transform: scaleY(1.3);
 }
 
@@ -277,7 +277,7 @@ html.has-scroll-dragging {
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
-[data-scroll-direction='horizontal'] .c-scrollbar_thumb {
+[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
   right: auto;
   bottom: 0;
 }
@@ -375,7 +375,7 @@ html.has-scroll-dragging {
 }
 
 .card-info:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
@@ -524,37 +524,61 @@ html.has-scroll-dragging {
 .navigation {
   background-color: #091422;
   height: 100vh;
-  width: 7rem;
+  width: 6rem;
   position: fixed;
   z-index: 1;
-  padding: 2rem 0;
+  padding: 1.5rem 0;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 }
 
 .nav-logo {
+  width: auto;
   display: flex;
   justify-content: center;
-  width: 100%;
-  padding: 0 1rem;
+  position: relative;
 }
 
-.nav-items {
+.nav-logo--image {
+  width: 100%;
+  position: absolute;
+  padding: 0 1.5rem;
+}
+
+.item {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 .nav-item {
+  display: flex;
+  flex-direction: column;
+  min-width: 6rem;
+  align-items: center;
   padding: 2rem 0;
+}
+
+.nav-item--title {
+  color: #fdecd2;
+  text-transform: uppercase;
+  font-size: 1rem;
+  display: none;
+  opacity: 0;
+  font-weight: 900;
 }
 
 .nav-profile {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   width: 100%;
+  align-items: center;
+}
+
+.nav-profile--image {
+  display: flex;
+  flex-direction: column;
+  min-width: 6rem;
   align-items: center;
 }
 
