--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ body {
 /* Page Loader */
 .js .loading::before,
 .js .loading::after {
-  content: '';
+  content: "";
   position: fixed;
   z-index: 1000;
 }
@@ -151,7 +151,7 @@ a:focus {
     pointer-events: none;
     grid-template-columns: auto 1fr 1fr auto;
     grid-template-rows: auto;
-    grid-template-areas: 'title demos demos links';
+    grid-template-areas: "title demos demos links";
   }
   .frame__title {
     margin: 0 4rem 0 0;
@@ -218,14 +218,14 @@ html.has-scroll-dragging {
   min-height: 100vh;
 }
 
-[data-scroll-direction='horizontal'] [data-scroll-container] {
+[data-scroll-direction="horizontal"] [data-scroll-container] {
   white-space: nowrap;
   height: 100vh;
   display: inline-block;
   white-space: nowrap;
 }
 
-[data-scroll-direction='horizontal'] [data-scroll-section] {
+[data-scroll-direction="horizontal"] [data-scroll-section] {
   display: inline-block;
   vertical-align: top;
   white-space: nowrap;
@@ -250,14 +250,14 @@ html.has-scroll-dragging {
 .has-scroll-dragging .c-scrollbar {
   opacity: 1;
 }
-[data-scroll-direction='horizontal'] .c-scrollbar {
+[data-scroll-direction="horizontal"] .c-scrollbar {
   width: 100%;
   height: 10px;
   top: auto;
   bottom: 0;
   transform: scaleY(1);
 }
-[data-scroll-direction='horizontal'] .c-scrollbar:hover {
+[data-scroll-direction="horizontal"] .c-scrollbar:hover {
   transform: scaleY(1.3);
 }
 
@@ -277,7 +277,7 @@ html.has-scroll-dragging {
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
-[data-scroll-direction='horizontal'] .c-scrollbar_thumb {
+[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
   right: auto;
   bottom: 0;
 }
@@ -375,7 +375,7 @@ html.has-scroll-dragging {
 }
 
 .card-info:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
@@ -570,15 +570,19 @@ html.has-scroll-dragging {
   color: #fdecd2;
   text-transform: uppercase;
   font-size: 1rem;
-  display: none;
   font-weight: 900;
+  visibility: hidden;
   white-space: nowrap;
-  animation: opacityDown 0.6s ease-in-out;
+  transition-delay: 0s;
+  opacity: 0;
+  transition-duration: 0.2s;
 }
 
 .navigation:hover .nav-item--title {
-  animation: opacity 0.6s ease-in-out;
-  display: flex;
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0.2s;
+  transition-duration: 0.2s;
 }
 
 .nav-profile {
@@ -602,43 +606,43 @@ html.has-scroll-dragging {
 @keyframes opacity {
   0% {
     opacity: 0;
-    display: none;
+    visibility: hidden;
   }
 
   50% {
     opacity: 0;
-    display: none;
+    visibility: hidden;
   }
 
   75% {
     opacity: 0.5;
-    display: flex;
+    visibility: visible;
   }
 
   100% {
     opacity: 1;
-    display: flex;
+    visibility: visible;
   }
 }
 
 @keyframes opacityDown {
   0% {
     opacity: 1;
-    display: flex;
+    visibility: visible;
   }
 
   50% {
     opacity: 0.5;
-    display: flex;
+    visibility: visible;
   }
 
   75% {
     opacity: 0;
-    display: none;
+    visibility: hidden;
   }
 
   100% {
     opacity: 0;
-    display: none;
+    visibility: hidden;
   }
 }
