Menu Transition Extra

--- a/css/styles.css
+++ b/css/styles.css
@@ -576,6 +576,7 @@ html.has-scroll-dragging {
   transition-delay: 0s;
   opacity: 0;
   transition-duration: 0.2s;
+  margin-left: -3rem;
 }
 
 .navigation:hover .nav-item--title {
@@ -583,6 +584,7 @@ html.has-scroll-dragging {
   opacity: 1;
   transition-delay: 0.2s;
   transition-duration: 0.2s;
+  margin-left: 0;
 }
 
 .nav-profile {
@@ -601,48 +603,4 @@ html.has-scroll-dragging {
 .nav-profile img {
   border: 0.2rem solid #fdecd2;
   border-radius: 50%;
-}
-
-@keyframes opacity {
-  0% {
-    opacity: 0;
-    visibility: hidden;
-  }
-
-  50% {
-    opacity: 0;
-    visibility: hidden;
-  }
-
-  75% {
-    opacity: 0.5;
-    visibility: visible;
-  }
-
-  100% {
-    opacity: 1;
-    visibility: visible;
-  }
-}
-
-@keyframes opacityDown {
-  0% {
-    opacity: 1;
-    visibility: visible;
-  }
-
-  50% {
-    opacity: 0.5;
-    visibility: visible;
-  }
-
-  75% {
-    opacity: 0;
-    visibility: hidden;
-  }
-
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
 }
