--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
   height: 100%;
+  cursor: none;
 }
 
 /* stylelint-disable */
@@ -48,7 +49,7 @@ body {
 /* Page Loader */
 .js .loading::before,
 .js .loading::after {
-  content: "";
+  content: '';
   position: fixed;
   z-index: 1000;
 }
@@ -151,7 +152,7 @@ a:focus {
     pointer-events: none;
     grid-template-columns: auto 1fr 1fr auto;
     grid-template-rows: auto;
-    grid-template-areas: "title demos demos links";
+    grid-template-areas: 'title demos demos links';
   }
   .frame__title {
     margin: 0 4rem 0 0;
@@ -218,14 +219,14 @@ html.has-scroll-dragging {
   min-height: 100vh;
 }
 
-[data-scroll-direction="horizontal"] [data-scroll-container] {
+[data-scroll-direction='horizontal'] [data-scroll-container] {
   white-space: nowrap;
   height: 100vh;
   display: inline-block;
   white-space: nowrap;
 }
 
-[data-scroll-direction="horizontal"] [data-scroll-section] {
+[data-scroll-direction='horizontal'] [data-scroll-section] {
   display: inline-block;
   vertical-align: top;
   white-space: nowrap;
@@ -250,14 +251,14 @@ html.has-scroll-dragging {
 .has-scroll-dragging .c-scrollbar {
   opacity: 1;
 }
-[data-scroll-direction="horizontal"] .c-scrollbar {
+[data-scroll-direction='horizontal'] .c-scrollbar {
   width: 100%;
   height: 10px;
   top: auto;
   bottom: 0;
   transform: scaleY(1);
 }
-[data-scroll-direction="horizontal"] .c-scrollbar:hover {
+[data-scroll-direction='horizontal'] .c-scrollbar:hover {
   transform: scaleY(1.3);
 }
 
@@ -277,7 +278,7 @@ html.has-scroll-dragging {
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
-[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
+[data-scroll-direction='horizontal'] .c-scrollbar_thumb {
   right: auto;
   bottom: 0;
 }
@@ -375,7 +376,7 @@ html.has-scroll-dragging {
 }
 
 .card-info:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -603,4 +604,17 @@ html.has-scroll-dragging {
 .nav-profile img {
   border: 0.2rem solid #fdecd2;
   border-radius: 50%;
+}
+
+.cursor {
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  mix-blend-mode: difference;
+  z-index: 1000;
+}
+
+.cursor__ball circle {
+  fill: #dfd6ca;
 }
