--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body {
 /* Page Loader */
 .js .loading::before,
 .js .loading::after {
-  content: '';
+  content: "";
   position: fixed;
   z-index: 1000;
 }
@@ -152,7 +152,7 @@ a:focus {
     pointer-events: none;
     grid-template-columns: auto 1fr 1fr auto;
     grid-template-rows: auto;
-    grid-template-areas: 'title demos demos links';
+    grid-template-areas: "title demos demos links";
   }
   .frame__title {
     margin: 0 4rem 0 0;
@@ -219,14 +219,14 @@ html.has-scroll-dragging {
   min-height: 100vh;
 }
 
-[data-scroll-direction='horizontal'] [data-scroll-container] {
+[data-scroll-direction="horizontal"] [data-scroll-container] {
   white-space: nowrap;
   height: 100vh;
   display: inline-block;
   white-space: nowrap;
 }
 
-[data-scroll-direction='horizontal'] [data-scroll-section] {
+[data-scroll-direction="horizontal"] [data-scroll-section] {
   display: inline-block;
   vertical-align: top;
   white-space: nowrap;
@@ -251,14 +251,14 @@ html.has-scroll-dragging {
 .has-scroll-dragging .c-scrollbar {
   opacity: 1;
 }
-[data-scroll-direction='horizontal'] .c-scrollbar {
+[data-scroll-direction="horizontal"] .c-scrollbar {
   width: 100%;
   height: 10px;
   top: auto;
   bottom: 0;
   transform: scaleY(1);
 }
-[data-scroll-direction='horizontal'] .c-scrollbar:hover {
+[data-scroll-direction="horizontal"] .c-scrollbar:hover {
   transform: scaleY(1.3);
 }
 
@@ -278,7 +278,7 @@ html.has-scroll-dragging {
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
-[data-scroll-direction='horizontal'] .c-scrollbar_thumb {
+[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
   right: auto;
   bottom: 0;
 }
@@ -376,7 +376,7 @@ html.has-scroll-dragging {
 }
 
 .card-info:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background: inherit;
@@ -568,10 +568,11 @@ html.has-scroll-dragging {
 }
 
 .nav-item--title {
+  font-family: Montserrat, sans-serif;
   color: #fdecd2;
   text-transform: uppercase;
   font-size: 1rem;
-  font-weight: 900;
+  font-weight: 800;
   visibility: hidden;
   white-space: nowrap;
   transition-delay: 0s;
@@ -580,7 +581,21 @@ html.has-scroll-dragging {
   margin-left: -3rem;
 }
 
-.navigation:hover .nav-item--title {
+.nav-item--small {
+  font-family: Montserrat, sans-serif;
+  color: #fdecd2;
+  font-size: 1.1rem;
+  font-weight: 500;
+  visibility: hidden;
+  white-space: nowrap;
+  transition-delay: 0s;
+  opacity: 0;
+  transition-duration: 0.2s;
+  margin-left: -3rem;
+}
+
+.navigation:hover .nav-item--title,
+.navigation:hover .nav-item--small {
   visibility: visible;
   opacity: 1;
   transition-delay: 0.2s;
@@ -592,18 +607,38 @@ html.has-scroll-dragging {
   display: flex;
   width: 100%;
   align-items: center;
+  flex-direction: column;
+}
+
+.profile {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 1rem 0;
 }
 
 .nav-profile--image {
   display: flex;
   flex-direction: column;
-  min-width: 6rem;
   align-items: center;
 }
 
-.nav-profile img {
+.nav-profile--image img {
   border: 0.2rem solid #fdecd2;
   border-radius: 50%;
+  object-fit: cover;
+  max-width: 3rem;
+}
+
+.profile-button {
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 1rem 0;
 }
 
 .cursor {
