--- a/css/styles.css
+++ b/css/styles.css
@@ -331,17 +331,6 @@ html.has-scroll-dragging {
   padding: 3rem;
 }
 
-.card-layers {
-  position: relative;
-  width: 100%;
-  background: inherit;
-  border-radius: 0.1rem solid #091422;
-  border: inherit;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-
 /* .background-card--info {
   position: absolute;
   top: 5%;
@@ -652,4 +641,8 @@ html.has-scroll-dragging {
 
 .cursor__ball circle {
   fill: #dfd6ca;
+}
+
+.form {
+  height: 100%;
 }
