--- a/components/Create/Step1/step1.module.css
+++ b/components/Create/Step1/step1.module.css
@@ -1,5 +1,5 @@
 @value tokens: "../../../css/tokens.module.css";
-@value blueColor, yellowColor from tokens;
+@value blueColor, greenColor, yellowColor from tokens;
 
 .part {
   composes: view from "../../../css/layout.module.css";
@@ -19,54 +19,47 @@
 }
 
 .subtitle {
-  composes: mediumTitle from "../../../css/typo.module.css";
-}
-
-.checkbox {
-  display: none;
-}
-
-.checkbox_text {
   composes: smallCaps from "../../../css/typo.module.css";
-  text-align: center;
-}
-
-.label {
-  composes: semiBold from "../../../css/typo.module.css";
-}
-
-.option {
-  composes: smallCaps from "../../../css/typo.module.css";
+  margin-bottom: 2rem;
 }
 
 .part_header {
   margin-bottom: 5rem;
 }
 
-.part_content {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+.checkbox {
+  /* display: none; */
 }
 
-.form {
+.checkbox:checked .checkbox_text {
+  color: red;
+}
+
+.checkbox_text {
+  composes: bold from "../../../css/typo.module.css";
+  text-align: center;
+  border: 0.2rem solid blueColor;
+  padding: 0.8rem 2rem;
+}
+
+.content_theme,
+.content_category {
+  justify-content: center;
+  text-align: center;
+}
+
+.content_theme {
+  margin-bottom: 5rem;
+}
+
+.content_options {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.input_container {
-  display: flex;
-  flex-direction: column;
-  padding: 1.2rem 0;
-}
-
-.input {
-  border-bottom: 0.2rem solid blueColor;
-  background-color: transparent;
-  border-top: none;
-  border-right: none;
-  border-left: none;
-  composes: empty from "../../../css/typo.module.css";
-  padding: 0.2rem 0.5rem;
+.content_option {
+  margin-right: 2rem;
 }
 
 .part_end {
