--- a/components/Create/Step2/step2.module.css
+++ b/components/Create/Step2/step2.module.css
@@ -1,5 +1,12 @@
+@value tokens: "../../../css/tokens.module.css";
+@value blueColor, yellowColor, beigeColor from tokens;
+
 .part {
   composes: view from "../../../css/layout.module.css";
+}
+
+.part_header {
+  margin-bottom: 2rem;
 }
 
 .title {
@@ -17,4 +24,196 @@
 
 .subtitle {
   composes: mediumTitle from "../../../css/typo.module.css";
+}
+
+.subtitle_project {
+  grid-column: span 2;
+}
+
+.part_content {
+  margin-bottom: 2rem;
+}
+
+.form {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 2rem;
+}
+
+.form_grid {
+  grid-column-gap: 2rem;
+  margin-top: 2rem;
+}
+
+.form_project {
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 2rem;
+  margin-top: 2rem;
+}
+
+.form_image {
+  margin-top: 2rem;
+  grid-column: 3;
+  width: 100%;
+  height: auto;
+}
+
+.form_description {
+  grid-column: span 3;
+  margin-top: 5rem;
+}
+
+.input_container {
+  display: flex;
+  flex-direction: column;
+  padding: 1.2rem 0;
+}
+
+.input {
+  border-bottom: 0.2rem solid blueColor;
+  background-color: transparent;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  composes: empty from "../../../css/typo.module.css";
+  padding: 0.2rem 0.5rem;
+}
+
+.input_title {
+  grid-row: 2;
+}
+
+.input_district {
+  grid-row: 3;
+}
+
+.input_tagline {
+  grid-column: span 2;
+}
+
+.input_text {
+  border: 0.2rem solid blueColor;
+  background-color: transparent;
+  composes: empty from "../../../css/typo.module.css";
+  padding: 0.5rem 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.input_text {
+  border: 0.2rem solid blueColor;
+  background-color: transparent;
+  composes: empty from "../../../css/typo.module.css";
+  padding: 0.5rem 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.input_image {
+  border: 0.2rem solid blueColor;
+  background-color: beigeColor;
+  padding: 1rem;
+  position: relative;
+  margin-top: 0.5rem;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.input_image:after {
+  content: "";
+  position: absolute;
+  display: block;
+  background: inherit;
+  border-radius: inherit;
+  border: inherit;
+  top: 0.6rem;
+  left: 0.6rem;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.2s ease-in-out;
+  padding: 0.2rem solid colorBlue;
+}
+
+.input_image__picture {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.label {
+  composes: semiBold from "../../../css/typo.module.css";
+  margin-bottom: 0.5rem;
+}
+
+.label_extra {
+  composes: smallText from "../../../css/typo.module.css";
+}
+
+.part_end {
+  display: grid;
+  margin-top: auto;
+  grid-column: span 3;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.button {
+  composes: button from "../../../css/buttons.module.css";
+}
+
+.circle_button {
+  composes: circleButton from "../../../css/buttons.module.css";
+}
+
+.button_image {
+  composes: buttonImage from "../../../css/buttons.module.css";
+}
+
+.checkbox {
+  display: none;
+}
+
+.input_submit {
+  display: none;
+}
+
+.button_next {
+  grid-column: 3;
+  text-align: center;
+  z-index: 1;
+}
+
+.button {
+  composes: button from "../../../css/buttons.module.css";
+}
+
+.circle_button {
+  composes: circleButton from "../../../css/buttons.module.css";
+}
+
+.button_image {
+  composes: buttonImage from "../../../css/buttons.module.css";
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+.button_back {
+  composes: buttonBack from "../../../css/buttons.module.css";
+}
+
+.back_image {
+  margin-right: 0.5rem;
+}
+
+.back_text {
+  composes: bold from "../../../css/typo.module.css";
 }
