--- a/components/Form/Step1/step1.module.css
+++ b/components/Form/Step1/step1.module.css
@@ -46,6 +46,7 @@
 .part_content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  margin-bottom: 2rem;
 }
 
 .form {
@@ -70,47 +71,35 @@
 }
 
 .part_end {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  justify-self: flex-end;
-  grid-column: span 3;
+  display: grid;
+  grid-column: 1/4;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: auto;
+}
+
+.button_next {
+  grid-column: 3;
+  text-align: center;
+  z-index: 1;
 }
 
 .button {
-  border: none;
-  background-color: transparent;
+  composes: button from "../../../css/buttons.module.css";
 }
 
 .circle_button {
-  background-color: yellowColor;
-  border: 0.2rem solid blueColor;
-  position: relative;
-  display: block;
-  width: 100%;
-  animation: rotation 4s infinite linear;
-  animation-play-state: paused;
-  z-index: -1;
-  webkit-animation-play-state: paused;
-}
-
-.circle_button:after {
-  content: "";
-  position: absolute;
-  display: block;
-  background: inherit;
-  border-radius: inherit;
-  border: inherit;
-  bottom: 7%;
-  left: 7%;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  transition: all 0.2s ease-in-out;
-  padding: 0.2rem solid colorBlue;
+  composes: circleButton from "../../../css/buttons.module.css";
 }
 
 .button_image {
-  width: 100%;
-  height: 100%;
+  composes: buttonImage from "../../../css/buttons.module.css";
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
