--- a/css/layout.module.css
+++ b/css/layout.module.css
@@ -1,5 +1,7 @@
 .view {
-  height: 100%;
+  min-height: 100vh;
   padding: 5rem 0;
   margin: 0 12rem;
+  display: flex;
+  flex-direction: column;
 }
