--- a/css/styles.css
+++ b/css/styles.css
@@ -662,3 +662,10 @@ html.has-scroll-dragging {
   cursor: pointer;
   padding: 0;
 }
+
+#id_img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
+}
