--- a/css/typo.module.css
+++ b/css/typo.module.css
@@ -32,39 +32,41 @@
 .mediumTitle {
   font-family: Montserrat, sans-serif;
   font-weight: 800;
-  font-size: 2rem;
+  font-size: 2.2rem;
   text-transform: uppercase;
   color: blueColor;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.01rem;
+  line-height: 1.2rem;
 }
 
 .mediumTitleOutline {
   font-family: Montserrat, sans-serif;
-  font-weight: 800;
-  font-size: 2rem;
+  font-weight: 900;
+  font-size: 2.2rem;
   text-transform: uppercase;
-  -webkit-text-stroke: 0.4rem blueColor;
-  text-stroke: 0.4rem blueColor;
+  -webkit-text-stroke: 0.1rem blueColor;
+  text-stroke: 0.1rem blueColor;
   -webkit-text-fill-color: transparent;
   text-fill-color: transparent;
   display: flex;
   flex-direction: column;
-  line-height: 0.9;
+  letter-spacing: 0.05rem;
+  line-height: 1.2rem;
 }
 
 .smallCaps {
   font-family: Montserrat, sans-serif;
   font-weight: 800;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   letter-spacing: 0.05rem;
   text-transform: uppercase;
   color: blueColor;
 }
 
-.smallCapsBold {
+.smallCapsLight {
   font-family: Montserrat, sans-serif;
-  font-weight: 700;
-  font-size: 5rem;
+  font-weight: 600;
+  font-size: 1.3rem;
   text-transform: uppercase;
   color: lightColor;
 }
