--- a/css/projects.module.css
+++ b/css/projects.module.css
@@ -1,3 +1,6 @@
+@value tokens: "../css/tokens.module.css";
+@value blueColor, yellowColor, beigeColor from tokens;
+
 .part {
   composes: view from "../css/layout.module.css";
 }
@@ -16,12 +19,40 @@
 }
 
 .part_filter {
-  margin-top: 2rem;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .filter_search {
   display: flex;
   align-items: center;
+}
+
+.filter_start {
+  display: flex;
+}
+
+.filter_fase {
+  display: flex;
+}
+
+.filter_radio {
+  composes: smallCaps from "../css/typo.module.css";
+  color: #e5d6c0;
+}
+
+.filter_select {
+  border: 0.2rem solid blueColor;
+  background-color: transparent;
+  composes: smallCaps from "../css/typo.module.css";
+  padding: 0.5rem 1rem;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.filter_select:last-of-type {
+  margin-right: 0;
 }
 
 .input {
@@ -34,6 +65,24 @@
   padding: 0.2rem 0.5rem;
 }
 
+.input_radio[type="radio"]:hover ~ .input_text:after {
+  top: 0;
+  left: 0;
+}
+
+.input_radio[type="radio"]:checked + .filter_radio {
+  color: blueColor;
+}
+
+.input_radio[type="radio"]:checked ~ .input_text:after {
+  left: 0;
+  top: 0;
+}
+
+.input_none {
+  display: none;
+}
+
 .search_image {
   margin-right: 1rem;
 }
@@ -44,7 +93,10 @@
 
 .projecten {
   width: 100%;
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  grid-gap: 5rem;
+  grid-gap: 5rem; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
