--- a/css/typo.module.css
+++ b/css/typo.module.css
@@ -57,7 +57,7 @@
 .smallCaps {
   font-family: Montserrat, sans-serif;
   font-weight: 800;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   letter-spacing: 0.05rem;
   text-transform: uppercase;
   color: blueColor;
@@ -65,10 +65,11 @@
 
 .smallCapsLight {
   font-family: Montserrat, sans-serif;
-  font-weight: 600;
-  font-size: 1.3rem;
+  font-weight: 500;
+  font-size: 1.2rem;
+  letter-spacing: 0.05rem;
   text-transform: uppercase;
-  color: lightColor;
+  color: blueColor;
 }
 
 .text {
